--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bmdws3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://brycancode313.github.io/bmdhp",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
